# position-and-orientation-supervisor

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: poise.rviz  sim_config.yaml
config/scenarios/: gnss_slow_drift.yaml  imu_extrinsic_warn_only.yaml  odom_slip.yaml
docs/: safety_concept.md
launch/: poise.launch.py  poise_phase1.launch.py  poise_phase2.launch.py
msg/: IntegrityStatus.msg
poise/: qos.py
poise/checks/: calibration_validator.py  gnss_imu_checker.py  odometry_checker.py
poise/core/: integrity_aggregator.py
poise/sim/: gnss_publisher.py  imu_publisher.py
poise/visualization/: status_visualizer.py
